deployment/staging/services/api-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - image: gcr.io/bulkhead-staging/bulkhead-services-api
          imagePullPolicy: Always
          name: api
          ports:
            - name: http-server
              containerPort: 2300
          volumeMounts:
            - name: api-cache
              mountPath: /workdir/data
      volumes:
        - name: api-cache
          emptyDir: {}
