deployment/staging/services/api-docs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-docs-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: api-docs
    spec:
      containers:
        - image: gcr.io/bedrock-foundation/bedrock-services-api-docs
          imagePullPolicy: Always
          name: main
          ports:
            - name: http-server
              containerPort: 2400
          volumeMounts:
            - name: cache
              mountPath: /workdir/data
      volumes:
        - name: cache
          emptyDir: {}
