deployment/staging/services/api-jobs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jobs-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jobs
    spec:
      containers:
        - image: gcr.io/sharkbone-staging/sharkbone-jobs
          imagePullPolicy: Always
          name: jobs
          volumeMounts:
            - name: jobs-cache
              mountPath: /workdir/data
      volumes:
        - name: jobs-cache
          emptyDir: {}
