deployment/staging/services/pipeline-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pipeline-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: pipeline
    spec:
      containers:
      - image: gcr.io/platform-staging/platform-pipeline
        imagePullPolicy: Always
        name: pipeline
        volumeMounts:
          - name: pipeline-cache
            mountPath: /workdir/data
      volumes:
        - name: pipeline-cache
          emptyDir: {}
