deployment/staging/services/web-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - image: gcr.io/bulkhead-staging/bulkhead-services-web
          imagePullPolicy: Always
          name: web
          ports:
            - name: http-server
              containerPort: 2200
