deployment/staging/services/api-service.yml
apiVersion: v1
kind: Service
metadata:
 name: api
 labels:
   name: api
spec:
 type: LoadBalancer
 ports:
   - port: 80
     targetPort: 2300
     protocol: TCP
 selector:
   name: api
 loadBalancerIP: 34.73.123.40
