deployment/staging/services/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "api-ingress"
spec:
  backend:
    serviceName: api
    servicePort: 80
