deployment/staging/services/web-assets-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: assets-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "platform-assets-ingress"
spec:
  rules:
  - host: assets.platform.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: app
            servicePort: 80
