deployment/staging/services/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-ingress"
spec:
  backend:
    serviceName: web
    servicePort: 80
